--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <!-- Script principal -->
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <script src="script.js"></script>
+  <script src="/js/script.js"></script>
  
 </body>
 </html>
