--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Estilos personalizados -->
   <link href="/css/style.css" rel="stylesheet">
   <!-- Chart.js local -->
-  <script src="Chart.js-4.5.1/dist/chart.min.js"></script>
+  <script src="Chart.js-4.5.1/Chart.js-4.5.1/dist/chart.min.js"></script>
 </head>
 <body>
   <div class="container py-4">
